--- a/src/app/pages/seller-offerings/offerings/seller-product-spec/update-product-spec/update-product-spec.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-product-spec/update-product-spec/update-product-spec.component.html
@@ -1633,7 +1633,8 @@
                     {{ 'CREATE_OFFER._previous' | translate }}
                 </button>
         
-                <button (click)="goToStep(currentStep + 1)"
+                <button data-cy="btnNext"
+                        (click)="goToStep(currentStep + 1)"
                         [disabled]="currentStep === steps.length - 1 || !canNavigate(currentStep) || isStepDisabled()"
                         [ngClass]="{
                         'hover:bg-gray-100 hover:text-gray-700 dark:hover:bg-gray-700 dark:hover:text-white': currentStep !== steps.length - 1 && (validateCurrentStep() || canNavigate(currentStep)),
@@ -1647,12 +1648,12 @@
                         256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/>
                 </svg>
                 </button>
-                <button (click)="updateProduct()"
+                <button data-cy="productSpecUpdate" (click)="updateProduct()"
                 [disabled]="isStepDisabled() || loading"
                 [ngClass]="loading || isStepDisabled() ? 'opacity-50' : 'hover:bg-primary-50'"
         
                 class="px-4 py-2 text-base font-medium text-white rounded-lg bg-primary-100">
-                    Update Product
+                    {{ 'UPDATE_PROD_SPEC._update_prod' | translate }}
                 </button>
             </div>     
         </div>
