--- a/src/app/pages/seller-offerings/offerings/seller-service-spec/update-service-spec/update-service-spec.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-service-spec/update-service-spec/update-service-spec.component.html
@@ -522,7 +522,8 @@
                 {{ 'CREATE_OFFER._previous' | translate }}
             </button>
     
-            <button (click)="goToStep(currentStep + 1)"
+            <button data-cy="servSpecUpdateNext"
+                    (click)="goToStep(currentStep + 1)"
                     [disabled]="currentStep === steps.length - 1 || !canNavigate(currentStep) || !generalForm.valid"
                     [ngClass]="{
                     'hover:bg-gray-100 hover:text-gray-700 dark:hover:bg-gray-700 dark:hover:text-white': currentStep !== steps.length - 1 && (validateCurrentStep() || canNavigate(currentStep)),
@@ -536,12 +537,13 @@
                     256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/>
             </svg>
             </button>
-            <button (click)="updateService()"
+            <button data-cy="serviceSpecUpdate"
+            (click)="updateService()"
             [disabled]="!generalForm.valid || loading"
             [ngClass]="loading || !generalForm.valid ? 'opacity-50' : 'hover:bg-primary-50'"
     
             class="px-4 py-2 text-base font-medium text-white rounded-lg bg-primary-100">
-                Update Service
+                {{ 'UPDATE_SERV_SPEC._update_serv' | translate }}
             </button>
         </div>
     </div>
