--- a/src/app/pages/seller-offerings/offerings/seller-resource-spec/create-resource-spec/create-resource-spec.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-resource-spec/create-resource-spec/create-resource-spec.component.html
@@ -444,7 +444,8 @@
                 {{ 'CREATE_OFFER._previous' | translate }}
             </button>
     
-            <button (click)="goToStep(currentStep + 1)"
+            <button data-cy="resSpecNext"
+                    (click)="goToStep(currentStep + 1)"
                     [disabled]="currentStep === steps.length - 1 || !validateCurrentStep() || !canNavigate(currentStep)"
                     [ngClass]="{
                     'hover:bg-gray-100 hover:text-gray-700 dark:hover:bg-gray-700 dark:hover:text-white': currentStep !== steps.length - 1 && (validateCurrentStep() || canNavigate(currentStep)),
@@ -459,12 +460,13 @@
             </svg>
             </button>
             @if (currentStep === 2) {
-            <button  (click)="createResource()"
+            <button data-cy="resSpecFinish"
+            (click)="createResource()"
             [disabled]="!generalForm.valid || loading"
             [ngClass]="loading || !generalForm.valid ? 'opacity-50' : 'hover:bg-primary-50'"
     
             class="px-4 py-2 text-base font-medium text-white rounded-lg bg-primary-100">
-                Create Resource
+                {{ 'CREATE_RES_SPEC._create_res' | translate }}
             </button>
             }
         </div>
