--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -180,6 +180,9 @@
               <li>
                 <button id="quotelist" (click)="goTo('/quote-list')" class="flex w-full justify-left px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"><fa-icon [icon]="faReceipt" class="mr-2"></fa-icon>Quotes</button>
               </li>
+              <li>
+                <button id="tenderlist" (click)="goTo('/tenders')" class="flex w-full justify-left px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"><fa-icon [icon]="faReceipt" class="mr-2"></fa-icon>Tenders</button>
+              </li>
             }
             <li>
               <a
