some tag colission fixed

--- a/src/app/offerings/featured/featured.component.html
+++ b/src/app/offerings/featured/featured.component.html
@@ -6,7 +6,7 @@
       <div class="flex flex-col w-full h-full bg-secondary-50 dark:bg-secondary-100 rounded-lg dark:border-secondary-100 border-secondary-50 border">
     
         <div class="flex-1 h-full bg-cover bg-right-bottom bg-opacity-25 rounded-lg" style="background-image: url(assets/logos/dome-logo-element-colour.png)">
-          <div class="flex-1 h-full px-5 py-5 bg-secondary-50/95 dark:bg-secondary-100/95 rounded-lg">
+          <div data-cy="categoryItem" class="flex-1 h-full px-5 py-5 bg-secondary-50/95 dark:bg-secondary-100/95 rounded-lg">
             <a  class="cursor-pointer">
               <h5 class="text-xl font-semibold line-clamp-2 tracking-tight text-primary-100 dark:text-white text-wrap break-words">{{cat.name}}</h5>
             </a>
