--- a/src/app/shared/categories-filter/categories-filter.component.html
+++ b/src/app/shared/categories-filter/categories-filter.component.html
@@ -23,7 +23,7 @@
                 </div>
               </div>
             } @else {
-              <bae-category-item [data]="category" [isParent]="true" [isFirst]="$first" [isLast]="$last"></bae-category-item>
+              <bae-category-item data-cy="categoryItemService" [data]="category" [isParent]="true" [isFirst]="$first" [isLast]="$last"></bae-category-item>
             }
           }
         </h2>
