--- a/src/app/pages/product-details/product-details.component.html
+++ b/src/app/pages/product-details/product-details.component.html
@@ -262,7 +262,10 @@
                        {{ 'PRODUCT_DETAILS._self_attestation' | translate }}
                     </a>
                   }
-                  
+                @if(complianceProf.length>0){
+                <h3 class="text-2xl font-bold text-primary-100 dark:text-primary-50 text-left mb-2">
+                    3rd party certifications:
+                </h3>
                 <div class="flex flex-wrap -mx-4 mt-4 justify-center">
                     @for (char of complianceProf; track char.id) {
                         <div class="w-full md:w-1/2 lg:w-1/3 px-4 mb-8 " >
@@ -307,6 +310,23 @@
                         </div>
                     }
                 </div>
+                }
+                @if(additionalCerts.length>0){
+                    <h3 class="text-2xl font-bold text-primary-100 dark:text-primary-50 text-left mb-2">
+                        Additional certifications:
+                    </h3>
+                    <div class="flex flex-wrap -mx-4 mt-4 justify-center">
+                        @for (char of additionalCerts; track char.id) {
+                            <div class="w-full md:w-1/2 lg:w-1/3 px-4 mb-8 " >
+                                <div class="border border-2 rounded-lg shadow bg-white dark:bg-secondary-200 shadow-md p-8 h-full border-primary-100 cursor-pointer" (click)="goToLink(char.productSpecCharacteristicValue?.at(0)?.value)">
+                                    <fa-icon [icon]="faAtom" class="fa-2xl text-primary-100 align-middle"></fa-icon>
+                                    <h3 class="text-2xl font-bold mt-4 dark:text-white">{{normalizeName(char.name)}}</h3>
+    
+                                </div>
+                            </div>
+                        }
+                    </div>
+                }
             </div>
 
             <h2 class="text-4xl font-extrabold text-primary-100 dark:text-primary-50 text-center pb-8 pt-12">{{ 'PRODUCT_DETAILS._product_pricing' | translate }}</h2>
