--- a/src/app/pages/seller-offerings/seller-offerings.component.html
+++ b/src/app/pages/seller-offerings/seller-offerings.component.html
@@ -107,7 +107,7 @@
           <update-catalog [cat]="catalog_to_update"></update-catalog>
         }
         @if(show_create_custom_offer){
-          <app-custom-offer [offer]="offer_to_update"></app-custom-offer>
+          <app-custom-offer [offer]="offer_to_update" [partyId]="custom_offer_partyId"></app-custom-offer>
         }
     </div>
 </div>
