--- a/src/app/pages/product-orders/sections/invoices-info/invoices-info.component.html
+++ b/src/app/pages/product-orders/sections/invoices-info/invoices-info.component.html
@@ -229,8 +229,10 @@
                         <p class="text-sm font-bold text-gray-700 dark:text-white">
                           {{ 'INVOICES._product_acbr_ref' | translate }}:
                         </p>
-                        <p class="text-sm text-gray-600 dark:text-gray-200">
-                          {{acbr.product?.href}}
+                        <p class="text-sm text-blue-100 dark:text-blue-200 font-mono">
+                          <u><a href="/product-inventory/{{acbr.product?.href}}">
+                            {{acbr.product?.href}}
+                          </a></u>
                         </p>
                       </div>
 
